2000-07-13  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/transaction-report.scm: Added checks
	to reverse balances if global option set.

	* src/guile/gnc.gwp: Added wrapping for gnc_reverse_balance

2000-06-25  Dave Peticolas  <dave@krondo.com>

	* src/scm/date-utilities.scm: cleanup.

	* src/scm/report/transaction-report.scm: fix bug in use of
	timepairs.

2000-06-18  Dave Peticolas  <dave@krondo.com>

	* src/scm/command-line.scm: take 'development version' out
	of the --version string.

	* src/guile/gnucash.c.in: take out the unstable message.

	* rpm/gnucash.spec.in: Take out the japanese translation.

	* src/scm/report/hello-world.scm: take out the testing option
	to crash the report.

	* src/gnome/window-register.c (gnc_register_create_menu_bar): take
	out the check printing menu item.

	* src/scm/report/report-list.scm: take out the budget report.

	* src/scm/extensions.scm: Take out the extensions menu.

	* configure.in: bump the version to 1.4.0 and remove the japanese
	translation from the list of transations. It will be added back in
	when the translation is finished. Take out the gnome-print check.

2000-06-14  Dave Peticolas  <dave@krondo.com>

	* src/register/gnome/gnucash-item-edit.c (item_edit_show_list):
	make sure the current selected item is visible and, before doing
	so, process all pending events to make sure the list is shown and
	sized first.

2000-06-13  Dave Peticolas  <dave@krondo.com>

	* src/SplitLedger.c: refresh the main window before refreshing the
	register. This makes sure balances are recomputed first.

	* src/engine/Transaction.c (xaccSplitSetBaseValue): mark the split
	as having changed.

	* src/gnome/gnc-currency-edit.c: loosen the restrictions on what
	can be typed in. The 'currency' could potentially be a stock
	symbol.

2000-06-12  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-transfer.c: don't use 'Categories', it's a
	confusing term.

	* src/SplitLedger.c (LedgerAutoCompletion): open transaction